# timer-event-generator-in-C-

./: CMakeLists.txt  README.md  test.cpp
includes/: ITimer.hpp  MyTimer.hpp
sources/: MyTimer.cpp
